refresh middle conteiner

--- a/css/index-footer.css
+++ b/css/index-footer.css
@@ -13,7 +13,7 @@ section.footer__container {
     align-items: center;
     justify-content: space-between;
 }
-. container__top__inside__empty {
+.container__top__inside__empty {
     margin-bottom: 30px;
 }
 
@@ -65,16 +65,78 @@ section.footer__container {
     
 }
 .footer__container__middle {
-    border: 1px white solid;
+    border-bottom: 1px var(--line);
     background-color: var(--dark-color);
     color: var(--light-color);
     display: flex;
     flex-direction: column;  
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    padding: 70px 24px 45px 24px;
+}
+
+.footer__logo {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .footer__main__logo {
-    width: 179px;
+    max-width: 179px;
+}
+.footer__logo__text {
+    display: inline;
+    color: var(--line);
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 30px;
+    line-height: 27.2px;
+    padding: 0px 15px;
+    
+}
+.footer__navigation {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+}
+.footer__shop__container {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+}
+.footer__follow-us {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+.footer__red__line {
+    height: 2px;
+    width: 30%;
+    background-color: var(--accent-signal-color);
+    margin: 15px auto;
+}
+
+.footer__navigation__title {
+    font-size: 22px;
+}
+
+.navigation__link {
+    font-size: 16px;
+    line-height: normal;
+    display: flex;
+    flex-direction: column;
+}
+.footer__navigation__links {
+    margin-bottom: 15px;
+}
+.footer__shop__links {
+    margin-bottom: 15px;
 }
 
 
@@ -90,16 +152,6 @@ section.footer__container {
     justify-content: center;
    
 }
-.footer__logo__text {
-    color: gainsboro;
-    font-size: 16px;
-}
-
-.navigation__link {
-    display: flex;
-    flex-direction: column;
-}
-
 
 .footer__social {
     color: var(--light-color);
@@ -107,6 +159,7 @@ section.footer__container {
     width: 30px;
     background-color: var(--accent-signal-color);
     transition: 0.3s;
+    margin: 25px 5px 5px 5px;
 }
 .footer__social:hover {
     background-color: var(--light-color);
