--- a/css/index.css
+++ b/css/index.css
@@ -8,3 +8,4 @@
 @import url(index-main-collection.css);
 @import url(index-footer.css);
 @import url(index-deal.css);
+@import url(form-for-basket.css);
