--- a/css/index-main-sale.css
+++ b/css/index-main-sale.css
@@ -31,7 +31,8 @@
     max-width: 30%;
   }
 
-  .card__media1, .card__media2 {
+  .card__media1,
+  .card__media2 {
     max-width: 45%;
     justify-content: space-between;
   }
@@ -42,6 +43,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 24px;
+  justify-content: space-between;
 }
 
 .sale__card-link,
@@ -62,7 +64,7 @@
 }
 
 /* додати js на кнопки, щоб робити їх червоно кольору при натисканні і додованні в корзину */
-div.sale__card > .base__button-active {
+div.sale__card>.base__button:hover {
   background-color: var(--accent-signal-color);
   transition: 0.5s;
 }
