--- a/css/index-main-sale.css
+++ b/css/index-main-sale.css
@@ -18,11 +18,11 @@
 
 @media (min-width: 480px) {
   .sale__card {
-    max-width: 40%;
+    max-width: 45%;
   }
 
-  .card__media1 {
-    max-width: 100%;
+  .sale__card:nth-child(5n) {
+    max-width: 95%;
   }
 }
 
@@ -31,8 +31,8 @@
     max-width: 30%;
   }
 
-  .card__media1,
-  .card__media2 {
+  .sale__card:nth-child(4n),
+  .sale__card:nth-child(5n) {
     max-width: 45%;
     justify-content: space-between;
   }
