add hover on button in form-for-basket

--- a/css/form-for-basket.css
+++ b/css/form-for-basket.css
@@ -168,3 +168,8 @@
   .basket__form > button.base__button {
     align-self: center;
   }
+
+  .basket__form > button.base__button:hover {
+    background-color: var(--accent-signal-color);
+    transition: 0.5s;
+  }
